--- a/reserva.html
+++ b/reserva.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos-reserva.css">
     <title>Reserva</title>
 </head>
@@ -67,9 +68,19 @@
 
             </div>
         </div>
+        
         <div class="boton1">
-            <input class="botons " type="submit" value=" Registrar">
+            <a href="crear-paquete.html" class="btn btn-danger" >Atras</a>
+            <!-- <input class="botons " type="submit" value=" Registrar"> -->
         </div>
+        
+
+        <div class="boton1">
+            <a href="resumen-reserva.html" class="btn btn-primary">Siguiente</a>
+            <!-- <input class="botons " type="submit" value=" Registrar"> -->
+        </div>
+
+
         <P class="terminos-condiciones"> Estoy de acuerdo <a href="#">terminos y condiciones</a></P>
 
     </section>
