--- a/resumen-reserva.html
+++ b/resumen-reserva.html
@@ -55,7 +55,7 @@
     <div class="nahuad">
       <div class=" absoluto">
         <div class="btn-atras">
-          <a href="">Atras</a>
+          <a href="reserva.html">Atras</a>
         </div>
         <div class="btn-siguiente">
           <a href="">Siguiente</a>
