--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                         <span class="Menu-icon"><i class="fa-solid fa-bars"></i></span>
                         <nav class="navegacion">
                             <ul class="">
-                                <li><a href="#"><b>INICIO</b> </a></li>
-                                <li><a href="#"><b>DESTINOS</b> </a></li>
-                                <li><a href="#"><b>NOSOTROS</b> </a></li>
-                                <li><a href="#"><b>PAQUETES</b> </a></li>
-                                <li><a href="#"><b>GALERÍA</b> </a></li>
+                                <li><a href="#inicioID"><b>INICIO</b> </a></li>
+                                <li><a href="#destinosID"><b>DESTINOS</b> </a></li>
+                                <li><a href="#nosotrosID"><b>NOSOTROS</b> </a></li>
+                                <li><a href="#paquetesID"><b>PAQUETES</b> </a></li>
+                                <li><a href="#galeriaID"><b>GALERÍA</b> </a></li>
                             </ul>
                         </nav>
                     </div>
@@ -48,26 +48,12 @@
             </div>
         </header>
 
-        <script>
-            jQuery('document').ready(function ($) {
-                var menuBtn = $('.Menu-icon'),
-                    menu = $('.navegacion ul');
-                menuBtn.click(function () {
-                    if (menu.hasClass('show')) {
-                        menu.removeClass('show')
-
-                    } else {
-                        menu.addClass('show')
-                    }
-                });
-            })
-
-        </script>
+        
     </div>
 
     <!--INICIO-->
 
-    <div class="ContenedorInicio ">
+    <div class="ContenedorInicio" id="inicioID">
         <div class="contenido_inicio">
             <div class="row">
                 <div class="col">
@@ -91,7 +77,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-4 col-sm-4 col-5 bot_inicio">
-                    <a href="#" class="boton">
+                    <a href="crear-paquete.html" class="boton">
                         <span class="boton__texto">RESERVAR</span>
                         <i class="fa-solid fa-arrow-right"></i>
                     </a>
@@ -106,7 +92,7 @@
     </div>
 
     <!--INICIA DESTINOS-->
-    <dig class="generalDestinos">
+    <dig class="generalDestinos" id="destinosID">
         <div class="contenedorDestinos">
             <div class="box">
                 <div class="row">
@@ -166,7 +152,7 @@
         </div>
     </dig>
     <!--INICIA NOSOTROS-->
-    <div class="generalNosotros">
+    <div class="generalNosotros" id="nosotrosID">
         <div class="contenedorNosotros">
             <div class="row">
                 <div class="col  text-center mb-4">
@@ -218,7 +204,7 @@
         </div>
     </div>
     <!--PAQUETES-->
-    <div class="ContenedorPaquete text-center ">
+    <div class="ContenedorPaquete text-center " id="paquetesID">
 
         <div class="row">
             <div class="col  text-center mb-4">
@@ -315,7 +301,7 @@
 
     <!--INICIA GALERÍA-->
 
-    <div class="contenedorGaleria">
+    <div class="contenedorGaleria" id="galeriaID">
         <div class="row">
             <div class="col-lg-12  text-center mb-4">
                 <h2 class="display-1 Galeria"> <b> NUESTRA GALERÍA </b></h2>
@@ -391,6 +377,22 @@
             </div>
         </div>
     </footer>
+
+    <script>
+        jQuery('document').ready(function ($) {
+            var menuBtn = $('.Menu-icon'),
+                menu = $('.navegacion ul');
+            menuBtn.click(function () {
+                if (menu.hasClass('show')) {
+                    menu.removeClass('show')
+
+                } else {
+                    menu.addClass('show')
+                }
+            });
+        })
+
+    </script>
 </body>
 
 </html>
