--- a/factura.html
+++ b/factura.html
@@ -92,9 +92,8 @@
             <div class="row">
               <div class="col-12">
                 <div class="callout callout-info">
-                  <h5><i class="fas fa-info"></i> Note:</h5>
-                  This page has been enhanced for printing. Click the print button at the bottom of the invoice to test.
-                </div>
+                  <h5><i class="fas fa-info"></i> Nota:</h5>
+Su reserva ha sido registrada de forma exitosa                </div>
     
     
                 <!-- Main content -->
