--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </header>
 
-        
+
     </div>
 
     <!--INICIO-->
@@ -105,7 +105,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12 bot_destino">
-                                    <a href="#" class="boton">
+                                    <a href="crear-paquete.html" class="boton">
                                         <span class="boton__texto">RESERVAR</span>
                                         <i class="fa-solid fa-arrow-right"></i>
                                     </a>
@@ -122,7 +122,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12 bot_destino">
-                                    <a href="#" class="boton">
+                                    <a href="crear-paquete.html" class="boton">
                                         <span class="boton__texto">RESERVAR</span>
                                         <i class="fa-solid fa-arrow-right"></i>
                                     </a>
@@ -139,7 +139,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12 bot_destino">
-                                    <a href="#" class="boton">
+                                    <a href="crear-paquete.html" class="boton">
                                         <span class="boton__texto">RESERVAR</span>
                                         <i class="fa-solid fa-arrow-right"></i>
                                     </a>
@@ -221,7 +221,9 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12 bot-paquete">
-                            <button class="boton1">Vista Rápida</button>
+                            <a href="crear-paquete.html">
+                                <button class="boton1">Vista Rápida</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -240,7 +242,9 @@
                     </div>
                     <div class="row">
                         <div class="col bot-paquete">
-                            <button class="boton2">Vista Rápida</button>
+                            <a href="crear-paquete.html">
+                                <button class="boton2">Vista Rápida</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -259,7 +263,9 @@
                     </div>
                     <div class="row">
                         <div class="col bot-paquete">
-                            <button class="boton3">Vista Rapida</button>
+                            </a><a href="crear-paquete.html">
+                                <button class="boton3">Vista Rapida</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -279,7 +285,9 @@
                     </div>
                     <div class="row">
                         <div class="col bot-paquete">
-                            <button class="boton4">Vista Rapida</button>
+                            </a><a href="crear-paquete.html">
+                                <button class="boton4">Vista Rapida</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -292,7 +300,9 @@
         </div>
         <div class="row">
             <div class="col text-center">
-                <button class="botonCrear">CREAR PAQUETE</button>
+                <a href="reserva.html">
+                    <button class="botonCrear">CREAR PAQUETE</button>
+                </a>
             </div>
         </div>
 
