--- a/resumen-reserva.html
+++ b/resumen-reserva.html
@@ -58,7 +58,7 @@
           <a href="reserva.html">Atras</a>
         </div>
         <div class="btn-siguiente">
-          <a href="">Siguiente</a>
+          <a href="factura.html">Siguiente</a>
         </div>
       </div>
     </div>
