--- a/reserva.html
+++ b/reserva.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos-reserva.css">
     <title>Reserva</title>
 </head>
@@ -16,7 +17,7 @@
     <section class="form-register">
         <div class="columnas">
             <div class=" columna-derecha">
-                <h2> RESERVA AQUI </h2>
+                <h1> <b>RESERVA AQUI</b>  </h1>
                 <p> INFORMACION PERSONAL </p>
 
                 <input class="controls" type=" text" name="nombres " id="nombres " placeholder=" ingrese nombres ">
@@ -24,7 +25,9 @@
                 <input class="controls" type=" text" name="Tipo-Documento" id="Tipo-Documento"
                     placeholder="tipo de Documento">
                 <input class="controls" type=" text" name="numero-id " id="numero-id " placeholder=" ingrese id ">
-                <input class="controls" type="text" name="fecha-nacimiento " id=" fecha-nacimiento"
+                <label for=""><b>Fecha de nacimiento:</b> </label>
+
+                <input class="controls" type="date" name="fecha-nacimiento " id=" fecha-nacimiento"
                     placeholder="fecha-nacimiento ">
                 <input class="controls" type="text" name="Genero " id=" genero" placeholder="M/F ">
                 <input class="controls" type="text" name="telefono" id="telefono" placeholder="telefono ">
@@ -44,9 +47,11 @@
 
                 <input class="controls" type="text" name="Tipo-de-habitaciones " id="Tipo-de-habitaciones"
                     placeholder="Tipo de habitaciones ">
+                    <label for=""><b> Fecha ingreso:</b></label>
                 <input class="controls" type="date" name="fecha-de-ingreso" id="fecha-de-ingreso"
                     placeholder="fecha-de-ingreso">
-                <input class="controls" type="text" name="fecha-de-salida" id="fecha-de-salida"
+                    <label for=""><b>Fecha de salida:</b> </label>
+                <input class="controls" type="date" name="fecha-de-salida" id="fecha-de-salida"
                     placeholder="fecha-de-salida">
 
                 <p> DATOS DE TARJETA </p>
@@ -57,6 +62,7 @@
                 <input class="controls" type="text" name="numero-de-tarjeta" id="numero-de-tarjeta"
                     placeholder="numero de tarjeta">
 
+                    <label for=""><b> Fecha de expiración:</b></label>
 
                 <input class="controls" type="date" name="Fecha-de-expiracion" id="Fecha-de-expiracion"
                     placeholder="Fecha de expiracion">
@@ -68,18 +74,17 @@
 
             </div>
         </div>
-        
-        <div class="boton1">
-            <a href="crear-paquete.html" class="btn btn-danger" >Atras</a>
-            <!-- <input class="botons " type="submit" value=" Registrar"> -->
-        </div>
-        
+        <div class="botonesReserva" style="display: flex;   justify-content:end;">
+            <div class="boton1">
+                <a href="crear-paquete.html" class="btn btn-danger">Atras</a>
+                <!-- <input class="botons " type="submit" value=" Registrar"> -->
+            </div>
 
-        <div class="boton1">
-            <a href="resumen-reserva.html" class="btn btn-primary">Siguiente</a>
-            <!-- <input class="botons " type="submit" value=" Registrar"> -->
+            <div class="boton1">
+                <a href="resumen-reserva.html" class="btn btn-primary">Siguiente</a>
+                <!-- <input class="botons " type="submit" value=" Registrar"> -->
+            </div>
         </div>
-
 
         <P class="terminos-condiciones"> Estoy de acuerdo <a href="#">terminos y condiciones</a></P>
 
